--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,10 @@ cachetools==6.2.4
 certifi==2026.1.4
 charset-normalizer==3.4.4
 click==8.3.1
+defusedxml==0.7.1
 distro==1.9.0
+fonttools==4.61.1
+fpdf2==2.8.5
 gitdb==4.0.12
 GitPython==3.1.46
 google-ai-generativelanguage==0.6.15
